src/include/duckdb.h


typedef enum DUCKDB_TYPE {
	DUCKDB_TYPE_INVALID = 0,
	DUCKDB_TYPE_BOOLEAN = 1,
	DUCKDB_TYPE_TINYINT = 2,
	DUCKDB_TYPE_SMALLINT = 3,
	DUCKDB_TYPE_INTEGER = 4,
	DUCKDB_TYPE_BIGINT = 5,
	DUCKDB_TYPE_UTINYINT = 6,
	DUCKDB_TYPE_USMALLINT = 7,
	DUCKDB_TYPE_UINTEGER = 8,
	DUCKDB_TYPE_UBIGINT = 9,
	DUCKDB_TYPE_FLOAT = 10,
	DUCKDB_TYPE_DOUBLE = 11,
	DUCKDB_TYPE_TIMESTAMP = 12,
	DUCKDB_TYPE_DATE = 13,
	DUCKDB_TYPE_TIME = 14,
	DUCKDB_TYPE_INTERVAL = 15,
	DUCKDB_TYPE_HUGEINT = 16,
	DUCKDB_TYPE_UHUGEINT = 32,
	DUCKDB_TYPE_VARCHAR = 17,
	DUCKDB_TYPE_BLOB = 18,
	DUCKDB_TYPE_DECIMAL = 19,
	DUCKDB_TYPE_TIMESTAMP_S = 20,
	DUCKDB_TYPE_TIMESTAMP_MS = 21,
	DUCKDB_TYPE_TIMESTAMP_NS = 22,
	DUCKDB_TYPE_ENUM = 23,
	DUCKDB_TYPE_LIST = 24,
	DUCKDB_TYPE_STRUCT = 25,
	DUCKDB_TYPE_MAP = 26,
	DUCKDB_TYPE_ARRAY = 33,
	DUCKDB_TYPE_UUID = 27,
	DUCKDB_TYPE_UNION = 28,
	DUCKDB_TYPE_BIT = 29,
	DUCKDB_TYPE_TIME_TZ = 30,
	DUCKDB_TYPE_TIMESTAMP_TZ = 31,
	DUCKDB_TYPE_TIMESTAMP_TZ_NS = 42,
	DUCKDB_TYPE_ANY = 34,
	DUCKDB_TYPE_BIGNUM = 35,
	DUCKDB_TYPE_SQLNULL = 36,
	DUCKDB_TYPE_STRING_LITERAL = 37,
	DUCKDB_TYPE_INTEGER_LITERAL = 38,
	DUCKDB_TYPE_TIME_NS = 39,
	DUCKDB_TYPE_GEOMETRY = 40,
	DUCKDB_TYPE_VARIANT = 41,
} duckdb_type;
typedef uint64_t idx_t;
typedef struct {
	int32_t days;
} duckdb_date;
typedef struct {
	int32_t year;
	int8_t month;
	int8_t day;
} duckdb_date_struct;
typedef struct {
	int64_t micros;
} duckdb_time;
typedef struct {
	int8_t hour;
	int8_t min;
	int8_t sec;
	int32_t micros;
} duckdb_time_struct;
typedef struct {
	int64_t micros;
} duckdb_timestamp;
typedef struct {
	duckdb_date_struct date;
	duckdb_time_struct time;
} duckdb_timestamp_struct;
typedef struct {
	int32_t months;
	int32_t days;
	int64_t micros;
} duckdb_interval;
typedef struct {
	uint64_t lower;
	int64_t upper;
} duckdb_hugeint;
typedef struct {
	void *deprecated_data;
	bool *deprecated_nullmask;
	duckdb_type deprecated_type;
	char *deprecated_name;
	void *internal_data;
} duckdb_column;
typedef struct {
	void *data;
	idx_t size;
} duckdb_blob;
typedef struct {
	idx_t deprecated_column_count;
	idx_t deprecated_row_count;
	idx_t deprecated_rows_changed;
	duckdb_column *deprecated_columns;
	char *deprecated_error_message;
	void *internal_data;
} duckdb_result;
DUCKDB_C_API void *duckdb_column_data(duckdb_result *result, idx_t col);
DUCKDB_C_API bool *duckdb_nullmask_data(duckdb_result *result, idx_t col);
DUCKDB_C_API bool duckdb_value_boolean(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API int8_t duckdb_value_int8(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API int16_t duckdb_value_int16(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API int32_t duckdb_value_int32(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API int64_t duckdb_value_int64(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API duckdb_hugeint duckdb_value_hugeint(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API uint8_t duckdb_value_uint8(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API uint16_t duckdb_value_uint16(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API uint32_t duckdb_value_uint32(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API uint64_t duckdb_value_uint64(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API float duckdb_value_float(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API double duckdb_value_double(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API duckdb_date duckdb_value_date(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API duckdb_time duckdb_value_time(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API duckdb_timestamp duckdb_value_timestamp(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API duckdb_interval duckdb_value_interval(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API char *duckdb_value_varchar(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API char *duckdb_value_varchar_internal(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API duckdb_blob duckdb_value_blob(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API bool duckdb_value_is_null(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_C_API void *duckdb_malloc(size_t size);
DUCKDB_C_API void duckdb_free(void *ptr);
DUCKDB_C_API duckdb_date_struct duckdb_from_date(duckdb_date date);
DUCKDB_C_API duckdb_date duckdb_to_date(duckdb_date_struct date);
DUCKDB_C_API duckdb_time_struct duckdb_from_time(duckdb_time time);
DUCKDB_C_API duckdb_time duckdb_to_time(duckdb_time_struct time);
DUCKDB_C_API duckdb_timestamp_struct duckdb_from_timestamp(duckdb_timestamp ts);
DUCKDB_C_API duckdb_timestamp duckdb_to_timestamp(duckdb_timestamp_struct ts);