tools/juliapkg/src/api.jl


// Safe fetch functions
// These functions will perform conversions if necessary.
// On failure (e.g. if conversion cannot be performed or if the value is NULL) a default value is returned.
// Note that these functions are slow since they perform bounds checking and conversion
// For fast access of values prefer using duckdb_column_data and duckdb_nullmask_data
=#


"""
	duckdb_value_boolean(result,col,row)

* returns: The boolean value at the specified location, or false if the value cannot be converted.

"""
function duckdb_value_boolean(result, col, row)
    return ccall(
        (:duckdb_value_boolean, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
	duckdb_value_int8(result,col,row)

* returns: The int8_t value at the specified location, or 0 if the value cannot be converted.

"""
function duckdb_value_int8(result, col, row)
    return ccall(
        (:duckdb_value_int8, libduckdb),
        Int8,
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
	duckdb_value_int16(result,col,row)

 * returns: The int16_t value at the specified location, or 0 if the value cannot be converted.

"""
function duckdb_value_int16(result, col, row)
    return ccall(
        (:duckdb_value_int16, libduckdb),
        Int16,
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
	duckdb_value_int32(result,col,row)

 * returns: The int32_t value at the specified location, or 0 if the value cannot be converted.

"""
function duckdb_value_int32(result, col, row)
    return ccall(
        (:duckdb_value_int32, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
	duckdb_value_int64(result,col,row)

 * returns: The int64_t value at the specified location, or 0 if the value cannot be converted.

"""
function duckdb_value_int64(result, col, row)
    return ccall(
        (:duckdb_value_int64, libduckdb),
        Int64,
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
	duckdb_value_hugeint(result,col,row)

 * returns: The duckdb_hugeint value at the specified location, or 0 if the value cannot be converted.

"""
function duckdb_value_hugeint(result, col, row)
    return ccall(
        (:duckdb_value_hugeint, libduckdb),
        Int64,
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
	duckdb_value_uint8(result,col,row)

 * returns: The uint8_t value at the specified location, or 0 if the value cannot be converted.
 
"""
function duckdb_value_uint8(result, col, row)
    return ccall(
        (:duckdb_value_uint8, libduckdb),
        UInt8,
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
	duckdb_value_uint16(result,col,row)

 * returns: The uint16_t value at the specified location, or 0 if the value cannot be converted.

"""
function duckdb_value_uint16(result, col, row)
    return ccall(
        (:duckdb_value_uint16, libduckdb),
        UInt16,
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
	duckdb_value_uint32(result,col,row)

 * returns: The uint32_t value at the specified location, or 0 if the value cannot be converted.

"""
function duckdb_value_uint32(result, col, row)
    return ccall(
        (:duckdb_value_uint32, libduckdb),
        UInt32,
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
	duckdb_value_uint64(result,col,row)

* returns: The uint64_t value at the specified location, or 0 if the value cannot be converted.

"""
function duckdb_value_uint64(result, col, row)
    return ccall(
        (:duckdb_value_uint64, libduckdb),
        UInt64,
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
	duckdb_value_float(result,col,row)

 * returns: The float value at the specified location, or 0 if the value cannot be converted.

"""
function duckdb_value_float(result, col, row)
    return ccall(
        (:duckdb_value_float, libduckdb),
        Float32,
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
	duckdb_value_double(result,col,row)

 * returns: The double value at the specified location, or 0 if the value cannot be converted.

"""
function duckdb_value_double(result, col, row)
    return ccall(
        (:duckdb_value_double, libduckdb),
        Float64,
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
duckdb_value_date(result,col,row)

 * returns: The duckdb_date value at the specified location, or 0 if the value cannot be converted.

DUCKDB_API duckdb_date duckdb_value_date(duckdb_result *result, idx_t col, idx_t row);
"""
function duckdb_value_date(result, col, row)
    return ccall(
        (:duckdb_value_date, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
duckdb_value_time(result,col,row)

 * returns: The duckdb_time value at the specified location, or 0 if the value cannot be converted.

DUCKDB_API duckdb_time duckdb_value_time(duckdb_result *result, idx_t col, idx_t row);
"""
function duckdb_value_time(result, col, row)
    return ccall(
        (:duckdb_value_time, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
duckdb_value_timestamp(result,col,row)

 * returns: The duckdb_timestamp value at the specified location, or 0 if the value cannot be converted.

DUCKDB_API duckdb_timestamp duckdb_value_timestamp(duckdb_result *result, idx_t col, idx_t row);
"""
function duckdb_value_timestamp(result, col, row)
    return ccall(
        (:duckdb_value_timestamp, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
duckdb_value_interval(result,col,row)

 * returns: The duckdb_interval value at the specified location, or 0 if the value cannot be converted.

DUCKDB_API duckdb_interval duckdb_value_interval(duckdb_result *result, idx_t col, idx_t row);
"""
function duckdb_value_interval(result, col, row)
    return ccall(
        (:duckdb_value_interval, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
duckdb_value_varchar(result,col,row)

* returns: The char* value at the specified location, or nullptr if the value cannot be converted.
The result must be freed with `duckdb_free`.

DUCKDB_API char *duckdb_value_varchar(duckdb_result *result, idx_t col, idx_t row);
"""
function duckdb_value_varchar(result, col, row)
    return ccall(
        (:duckdb_value_varchar, libduckdb),
        Ptr{UInt8},
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
duckdb_value_varchar_internal(result,col,row)

* returns: The char* value at the specified location. ONLY works on VARCHAR columns and does not auto-cast.
If the column is NOT a VARCHAR column this function will return NULL.

The result must NOT be freed.

DUCKDB_API char *duckdb_value_varchar_internal(duckdb_result *result, idx_t col, idx_t row);
"""
function duckdb_value_varchar_internal(result, col, row)
    return ccall(
        (:duckdb_value_varchar_internal, libduckdb),
        Ptr{UInt8},
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
duckdb_value_blob(result,col,row)

* returns: The duckdb_blob value at the specified location. Returns a blob with blob.data set to nullptr if the
value cannot be converted. The resulting "blob.data" must be freed with `duckdb_free.`

DUCKDB_API duckdb_blob duckdb_value_blob(duckdb_result *result, idx_t col, idx_t row);
"""
function duckdb_value_blob(result, col, row)
    return ccall(
        (:duckdb_value_blob, libduckdb),
        Ptr{Cvoid},
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

"""
duckdb_value_is_null(result,col,row)

 * returns: Returns true if the value at the specified index is NULL, and false otherwise.

DUCKDB_API bool duckdb_value_is_null(duckdb_result *result, idx_t col, idx_t row);
"""
function duckdb_value_is_null(result, col, row)
    return ccall(
        (:duckdb_value_is_null, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32, Int32),
        result,
        col - 1,
        row - 1,
    )
end

#=
//===--------------------------------------------------------------------===//
// Helpers
//===--------------------------------------------------------------------===//
=#


"""
duckdb_malloc(size)
	
Allocate `size` bytes of memory using the duckdb internal malloc function. Any memory allocated in this manner
should be freed using `duckdb_free`.

* size: The number of bytes to allocate.
* returns: A pointer to the allocated memory region.

DUCKDB_API void *duckdb_malloc(size_t size);
"""
function duckdb_malloc(size)
    return ccall((:duckdb_malloc, libduckdb), Cvoid, (Csize_t,), size)
end

"""
duckdb_free(ptr)

Free a value returned from `duckdb_malloc`, `duckdb_value_varchar` or `duckdb_value_blob`.

* ptr: The memory region to de-allocate.

DUCKDB_API void duckdb_free(void *ptr);
"""
function duckdb_free(ptr)
    return ccall((:duckdb_malloc, libduckdb), Cvoid, (Ptr{Cvoid},), ptr)
end

#=
//===--------------------------------------------------------------------===//
// Date/Time/Timestamp Helpers
//===--------------------------------------------------------------------===//
=#


"""
duckdb_from_date(date)

Decompose a `duckdb_date` object into year, month and date (stored as `duckdb_date_struct`).

* date: The date object, as obtained from a `DUCKDB_TYPE_DATE` column.
* returns: The `duckdb_date_struct` with the decomposed elements.

DUCKDB_API duckdb_date_struct duckdb_from_date(duckdb_date date);
"""
function duckdb_from_date(date)
    return ccall((:duckdb_from_date, libduckdb), Ptr{Cvoid}, (Ptr{Cvoid},), date)
end

"""
duckdb_to_date(date)

Re-compose a `duckdb_date` from year, month and date (`duckdb_date_struct`).

* date: The year, month and date stored in a `duckdb_date_struct`.
* returns: The `duckdb_date` element.

DUCKDB_API duckdb_date duckdb_to_date(duckdb_date_struct date);
"""
function duckdb_to_date(date)
    return ccall((:duckdb_to_date, libduckdb), Ptr{Cvoid}, (Ptr{Cvoid},), date)
end

"""
duckdb_from_time(time)

Decompose a `duckdb_time` object into hour, minute, second and microsecond (stored as `duckdb_time_struct`).

* time: The time object, as obtained from a `DUCKDB_TYPE_TIME` column.
* returns: The `duckdb_time_struct` with the decomposed elements.

DUCKDB_API duckdb_time_struct duckdb_from_time(duckdb_time time);
"""
function duckdb_from_time(time)
    return ccall((:duckdb_from_time, libduckdb), Ptr{Cvoid}, (Ptr{Cvoid},), time)
end

"""
duckdb_to_time(time)

Re-compose a `duckdb_time` from hour, minute, second and microsecond (`duckdb_time_struct`).

* time: The hour, minute, second and microsecond in a `duckdb_time_struct`.
* returns: The `duckdb_time` element.

DUCKDB_API duckdb_time duckdb_to_time(duckdb_time_struct time);
"""
function duckdb_to_time(time)
    return ccall((:duckdb_to_time, libduckdb), Ptr{Cvoid}, (Ptr{Cvoid},), time)
end

"""
duckdb_from_timestamp(ts)

Decompose a `duckdb_timestamp` object into a `duckdb_timestamp_struct`.

* ts: The ts object, as obtained from a `DUCKDB_TYPE_TIMESTAMP` column.
* returns: The `duckdb_timestamp_struct` with the decomposed elements.

DUCKDB_API duckdb_timestamp_struct duckdb_from_timestamp(duckdb_timestamp ts);
"""
function duckdb_from_timestamp(ts)
    return ccall((:duckdb_from_timestamp, libduckdb), Ptr{Cvoid}, (Ptr{Cvoid},), ts)
end

"""
duckdb_to_timestamp(ts)
